apps/gateway-proxyproto-canary/versions/1.0--1.0/manifests/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-local
spec:
  controllerName: io.cilium/gateway-controller
  description: Canary GatewayClass for testing Local traffic policy.
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-local
