apps/gateway-proxyproto-canary/versions/1.0--1.0/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: echoip-proxyproto-canary
spec:
  gatewayClassName: cilium-local
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: "nbg1"
      load-balancer.hetzner.cloud/name: "k8s01-lb01-gw-proxyproto-canary"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
